fix: router-view tag

--- a/laravel-vue-app/public/mix-manifest.json
+++ b/laravel-vue-app/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/router.js": "/js/router.js"
+    "/js/app.js": "/js/app.js?id=645f7600172e96b0ab1a",
+    "/css/app.css": "/css/app.css?id=0a40dceb0b6a2c6a2377",
+    "/js/router.js": "/js/router.js?id=bf99c3648206b0dea505"
 }
