fix: router.jsのルートディレクトリをApp.vueにしない

--- a/laravel-vue-app/public/mix-manifest.json
+++ b/laravel-vue-app/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=645f7600172e96b0ab1a",
-    "/css/app.css": "/css/app.css?id=0a40dceb0b6a2c6a2377",
-    "/js/router.js": "/js/router.js?id=bf99c3648206b0dea505"
+    "/js/app.js": "/js/app.js?id=43a28f5a135a3a2006ab",
+    "/css/app.css": "/css/app.css?id=0a40dceb0b6a2c6a2377"
 }
