--- a/laravel-vue-app/package.json
+++ b/laravel-vue-app/package.json
@@ -24,7 +24,8 @@
         "sass": "^1.20.1",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.6.0"
     },
     "dependencies": {
         "vue-router": "^3.0.7",
